--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,6 +32,17 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css">
   </head>
 	<body>
+        <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+            <a class="navbar-brand" href="#">syncpad server</a>
+            </div>
+            <ul class="nav navbar-nav">
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+            </ul>
+        </div>
+        </nav>
 		<div class="container">
 			<form class="form-horizontal" id="login-form" action="/login" method="post">
 				<div class="input-group">
