--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Home</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -36,15 +39,15 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css">
   </head>
 	<body>
+        <%- include('partials/header', {user: user}) %>
+
 		<div class="container">
-            <%- include('partials/header', {user: user}) %>
-            
 			<% if (user) { %>
 			<p>Hello, <%= user.username %>. View your <a href="/profile">profile</a>.</p><br>
 			<% } %>
-            
-			<%- include('partials/footer', {user: user}) %>
 		</div>
+
+        <%- include('partials/footer', {user: user}) %>
 	</body>
 </html>
 
