--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,8 @@
       <li><a href="/profile">My Profile</a></li>
 
       <% if (user.role == 'admin') { %>
-      <li><a href="/users">Users List</a></li>
+      <li><a href="/users">User List</a></li>
+      <li><a href="/clients">Client List</a></li>
       <% } %>
       
     </ul>
