Add header link to editor (for testing)

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,8 @@
     <ul class="nav navbar-nav">
       <li class="active"><a href="/">Home</a></li>
       <li><a href="/profile">My Profile</a></li>
-
+      <li><a href="/editor">Editor (TESTING)</a></li>
+      
       <% if (user.role == 'admin') { %>
       <li><a href="/users">User List</a></li>
       <li><a href="/clients">Client List</a></li>
