--- a/views/editor/editorSetup.ejs
+++ b/views/editor/editorSetup.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Login</title>
+    <title>Editor Room Setup</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font: 10px Helvetica, Arial; }
@@ -49,16 +49,6 @@
         </nav>
 		<div class="container">
 			<form class="form-horizontal" id="editor-login-form" action="/editor" method="post">
-            <div class="input-group">
-                <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                    <input name="user" id="user" type="text" placeholder="user" class="form-control" value="">
-            </div><br/>
-
-            <div class="input-group">
-                <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                <input name="password" id="password" type="password" placeholder="Password" class="form-control" value="">
-            </div><br/>
-
             <div class="input-group" id="encryption">
                 <span class="input-group-addon">Encryption Key</span>
                 <input name="encryption_key" id="encryption_key" type="text" placeholder="" class="form-control">
