Fix client list

--- a/views/clientsList.ejs
+++ b/views/clientsList.ejs
@@ -161,7 +161,7 @@ $(function ()
     {
         $.ajax(
         {
-            url: '/api/clientList',
+            url: '/api/listClients',
             type: "POST",
             xhrFields: {
                 withCredentials: true
