Commit refactoring of server for passport path.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -61,7 +61,7 @@
             When you execute syncpad, you will be greeted with a login window where you set the syncpad server url, your login information, the room ID you wish to join as well as the option to encrypt all messages sent to that room and what encrytion key to use.
             <br/><br/>
             The login window will look like this:<br/><br/>
-            <img src="/syncpad-login.png" />
+            <img src="/images/syncpad-login.png" />
             <br/><br/>
 
             <h4>Set the following information:</h4><br/>
